[package]
name = "rexplorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.2", features = ["ws"] }
tokio = { version = "1.27.0", features = ["full"] }
futures = "0.3.24"
serde = "1.0.160"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
hyper = { version = "0.14.25", features = ["full"] }
hyper-rustls = "0.24.0"
tokio-rustls = "0.24.0"
futures-util = "0.3.28"
rustls-pemfile = "1.0.2"
dotenv = "0.15.0"
